# Artifacts

./: .gitignore  Cargo.toml  craftable_equip.json  items.json  maps.json  monsters.json  resources.json
src/: flags.rs  lib.rs
src/api/: bank_actions.rs  character_actions.rs  client.rs  game_data.rs  getters.rs  grand_exchange.rs  mod.rs
src/formulas/: crafting.rs  mod.rs  recycling.rs  tiers.rs  xp.rs
src/loops/: alchemy.rs  bank_ops.rs  consumables.rs  crafting_exec.rs  crafting_plan.rs  fight.rs  flag_handling.rs  gather.rs  grand_exchange.rs  init.rs  merchant.rs  mod.rs  movement.rs  promotion.rs  refining.rs  repositioning.rs  utility.rs
src/optimize/: brute_force.rs  combat_sim.rs  eligibility.rs  gathering_sim.rs  mod.rs  skills.rs  slot_rating.rs  targeting.rs
src/types/: action_bodies.rs  character.rs  envelope.rs  grand_exchange.rs  item.rs  map.rs  mod.rs  monster.rs  resource.rs
