[package]
name = "artifactsmmo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "dump_info"
path = "src/bin/dump_info.rs"

[[bin]]
name = "move_char"
path = "src/bin/move_char.rs"

[[bin]]
name = "calculate_optimal"
path = "src/bin/calculate_optimal.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
